--- a/Davies_Burgers/style.css
+++ b/Davies_Burgers/style.css
@@ -15,6 +15,8 @@ a {
 
 nav {
   text-align: center;
+   margin: 0 auto;
+   width: 180px;
 }
 
 nav img {
@@ -26,6 +28,7 @@ nav span {
   font-size: 16px;
   font-weight: 100;
   letter-spacing: 2px;
+  margin: 10px 0px;
 }
 
 nav a {
@@ -36,6 +39,9 @@ nav a {
 
 .content {
   width: 100%;
+  height: 500px;
+  margin: 10px auto;
+  overflow: scroll;
 }
 
 /* Content Header */
@@ -44,6 +50,7 @@ nav a {
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
   background-position: center;
   background-size: cover;
+  height: 320px;
 }
 
 .header h1 {
@@ -54,12 +61,15 @@ nav a {
   font-weight: 300;
   line-height: 40px;
   width: 68%;
+  padding: 20px;
+  margin: 0px auto;
 }
 
 /* Content Body */
 
 .content .body {
   width: 90%;
+  margin: 0px auto;
 }
 
 .body p {
@@ -77,6 +87,10 @@ nav a {
   color: #05A8AA;
   display: block;
   font-weight: 700;
+  width: 200px;
+  padding: 20px;
+  margin: 40px auto;
+  border: 1px solid blue;
 }
 
 .button:hover {
@@ -88,12 +102,16 @@ nav a {
 /* Content Nutrition */
 
 ul.nutrition {
+  padding: 20px;
 }
 
 ul.nutrition li {
   display: inline-block;
   background-color: #05A8AA;
   list-style: none;
+  width: 200px;
+  padding: 10px 20px;
+  margin-bottom: 3px; 
 }
 
 .nutrition .category {
